--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Getting Started</title>
-     
+     <link rel = "stylesheet" type = "text/css" href = "css/app.css" />
   </head>
   <body>
-    <script src="main.js"></script>
+    
+    <script src="app.js"></script>
   </body>
 </html>
