--- a/index.html
+++ b/index.html
@@ -2,10 +2,38 @@
 <html>
   <head>
     <title>Getting Started</title>
-     <link rel = "stylesheet" type = "text/css" href = "css/app.css" />
+
+    <!-- Our styles -->
+    <link rel = "stylesheet" type = "text/css" href = "css/app.css" />
   </head>
   <body>
-    
+    <h1> Hello </h1>
+
+    <!-- Out code-->
     <script src="app.js"></script>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+            One of three columns
+            </div>
+            <div class="col-sm">
+            One of three columns
+            </div>
+            <div class="col-sm">
+            One of three columns
+            </div>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown button
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+        </div>
   </body>
 </html>
