--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head></head>
     <body>
-        <script src="dist/bundle.js"></script>
+        <h1>Heya!</h1>
+        <script src="./dist/bundle.js"></script>
     </body>
 </html>
