Building website- experimenting with CSS3 animations

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
             href="https://fonts.googleapis.com/css?family=Calligraffitti&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" type="text/css" href="dist/main.css" />
+        <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
     <body>
-        <script src="dist/bundle.js"></script>
+        <script src="bundle.js"></script>
         <div class="page hello">
             <h1>andre</h1>
             <div class="scroll-down"></div>
