--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link
-            href="https://fonts.googleapis.com/css?family=Calligraffitti&display=swap"
+            href="https://fonts.googleapis.com/css?family=Calligraffitti|Raleway&display=swap"
             rel="stylesheet"
         />
         <link rel="stylesheet" type="text/css" href="dist/main.css" />
@@ -15,7 +15,72 @@
         </div>
         <div class="page whoami">
             <div class="box">
-                I made a website
+                Web Developer
+                <svg
+                    id="laptop"
+                    data-name="Layer 1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 653.56 504.04"
+                >
+                    <defs>
+                        <style>
+                            .cls-1,
+                            .cls-2 {
+                                fill: none;
+                            }
+
+                            .cls-1,
+                            .cls-4 {
+                                stroke: #999;
+                            }
+
+                            .cls-1,
+                            .cls-2,
+                            .cls-3,
+                            .cls-4 {
+                                stroke-miterlimit: 10;
+                                stroke-width: 4px;
+                            }
+
+                            .cls-2,
+                            .cls-3 {
+                                stroke: #000;
+                            }
+
+                            .cls-3,
+                            .cls-4 {
+                                fill: none;
+                            }
+                        </style>
+                    </defs>
+                    <title>laptop</title>
+                    <rect
+                        class="cls-1 svg-animate"
+                        x="168.56"
+                        y="18"
+                        width="465"
+                        height="300"
+                    />
+                    <rect
+                        class="cls-2 svg-animate"
+                        x="150.56"
+                        y="2"
+                        width="501"
+                        height="332"
+                    />
+                    <polyline
+                        class="cls-3 svg-animate"
+                        points="150.56 334 4.56 487 598.56 502 651.56 334"
+                    />
+                    <polyline
+                        class="cls-4 svg-animate"
+                        points="217.56 474 269.56 413 445.56 417 413.56 480 217.56 474"
+                    />
+                    <polygon
+                        class="cls-1 svg-animate"
+                        points="156.56 342 628.56 342 600.56 406 104.56 398 156.56 342"
+                    />
+                </svg>
             </div>
         </div>
     </body>
