--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
                 >
                     <defs>
                         <style>
+                            @keyframes cloud {
+                                from {
+                                    stroke-dashoffset: 200;
+                                }
+                                to {
+                                    stroke-dashoffset: 0;
+                                }
+                            }
+
+                            .animate {
+                                stroke-dasharray: 2000;
+                                stroke-dashoffset: 2000;
+                                stroke-width: 10px;
+                                animation: cloud 4s ease-out alternate infinite;
+                            }
+
                             .cls-1,
                             .cls-2 {
                                 fill: none;
@@ -54,6 +70,13 @@
                             .cls-3,
                             .cls-4 {
                                 fill: none;
+                            }
+
+                            .cls-9 {
+                                stroke-dasharray: 2000;
+                                stroke-dashoffset: 2000;
+                                stroke-width: 10px;
+                                animation: cloud 4s ease-out alternate infinite;
                             }
                         </style>
                     </defs>
