Fixed layout on contact page

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
         <link
             href="https://fonts.googleapis.com/css?family=Calligraffitti|Raleway&display=swap"
             rel="stylesheet"
@@ -11,26 +12,28 @@
         <script src="bundle.js?version=1.0.1"></script>
         <div class="page hello">
             <h1>andre</h1>
-            <div class="scroll-down"></div>
+            <div class="scroll-down-page1"></div>
         </div>
         <div class="page whoami">
-                <h1>Senior Cafe Potato</h1> 
-                <h4>- and part time developer -</h4> 
-                
+            <div class="container">
+                <div>
+                    <h1>Senior Cafe Potato</h1> 
+                    <div>- and part time developer -</div> 
+                </div>
+                <div>
                 <svg
                     id="Layer_1"
                     data-name="Layer 1"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 703.62 524"
-                    width="600px"
-                    height="600px"
+                    width="200px"
+                    height="200px"
                 >
                     <defs>
                         <style>
                             .cls-1 {
                                 fill: #fff;
                             }
-
                             .cls-1,
                             .cls-2,
                             .cls-3 {
@@ -103,10 +106,15 @@
                         transform="translate(-236.85 -225)"
                     />
                 </svg>
-                <br>
-                613-314-2234 <br>
-                andretelfer@gmail.com
-            <div class="page hello">
+                    <div class="contact"> 
+                        613-314-2234 
+                    </div>
+                    <div class="contact">
+                        andretelfer@gmail.com
+                    </div>
+                </div>
+                <div class="scroll-down-page2"></div>
+            </div>
         </div>
     </body>
 </html>
