New glitch page

--- a/index.html
+++ b/index.html
@@ -1,120 +1,39 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta content="width=device-width, initial-scale=1" name="viewport" />
-        <link
-            href="https://fonts.googleapis.com/css?family=Calligraffitti|Raleway&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" type="text/css" href="dist/main.css?version=1.0.5" />
-    </head>
-    <body>
-        <script src="dist/bundle.js?version=1.0.5"></script>
-        <div class="page hello">
-            <h1>andre</h1>
-            <div class="scroll-down-page1"></div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"> </script>
+    <link href="https://fonts.googleapis.com/css?family=Oxanium&display=swap" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+    <div class="page center-content">
+        <div class="intro">
+            <h1 class="whoami glitch" data-text="Andre Telfer">Andre Telfer</h1>
+            <div><p class="typing caret"></p></div>
+            <div><p class="typing"></p></div>
+            <div><p class="typing"></p></div>
         </div>
-        <div class="page whoami">
-            <div class="container">
-                <div>
-                    <h1>Senior Cafe Potato</h1> 
-                    <div>- and part time developer -</div> 
-                </div>
-                <div>
-                <svg
-                    id="Layer_1"
-                    data-name="Layer 1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 703.62 524"
-                    width="200px"
-                    height="200px"
-                >
-                    <defs>
-                        <style>
-                            .cls-1 {
-                                fill: #fff;
-                            }
-                            .cls-1,
-                            .cls-2,
-                            .cls-3 {
-                                stroke: #000;
-                                stroke-linejoin: round;
-                                stroke-width: 4px;
-                            }
-
-                            .cls-2 {
-                                fill: none;
-                            }
-
-                            .cls-3 {
-                                fill: #f2f2f2;
-                            }
-                        </style>
-                    </defs>
-                    <title>laptop</title>
-                    <path
-                        class="cls-1"
-                        d="M839.71,658"
-                        transform="translate(-236.85 -225)"
-                    />
-                    <path
-                        class="cls-1"
-                        d="M911.06,583.66"
-                        transform="translate(-236.85 -225)"
-                    />
-                    <path
-                        class="cls-1"
-                        d="M328.55,651.59"
-                        transform="translate(-236.85 -225)"
-                    />
-                    <rect
-                        class="cls-2"
-                        x="182.32"
-                        y="13.74"
-                        width="506.86"
-                        height="323.7"
-                        rx="16"
-                    />
-                    <path
-                        class="cls-2"
-                        d="M914.47,227H430.53a24,24,0,0,0-24,24V550a24,24,0,0,0,18.92,23.46c-12.55,3.85-27.83,12.23-39,22L251.71,712.53c-15.39,13.38-17.23,24.23-4.1,24.23l479.32,0c13.13,0,36.25-10.85,51.65-24.23l134.71-117.1c12.49-10.86,16.05-20.05,9.94-23.13A24,24,0,0,0,938.47,550V251A24,24,0,0,0,914.47,227Z"
-                        transform="translate(-236.85 -225)"
-                    />
-                    <path
-                        class="cls-2"
-                        d="M239,730s-1.21,17,5,17l484.93-.2c13.13,0,36.25-10.85,51.65-24.23l134.71-117.1C925.86,596.28,927.8,582.84,927,578"
-                        transform="translate(-236.85 -225)"
-                    />
-                    <path
-                        class="cls-2"
-                        d="M923,572l-484.93-.8c-13.13,0-36.25,10.85-51.65,24.23L251.71,712.53"
-                        transform="translate(-236.85 -225)"
-                    />
-                    <path
-                        class="cls-3"
-                        d="M604.77,724.81l-204.4,0c-5.6,0-5.18-4,.94-9L454.86,672c6.12-5,15.62-9,21.22-9l204.4,0c5.6,0,5.18,4-.94,9L626,715.76C619.87,720.76,610.37,724.81,604.77,724.81Z"
-                        transform="translate(-236.85 -225)"
-                    />
-                    <path
-                        class="cls-3"
-                        d="M778.77,656l-406,0c-11.12,0-13.55-4.9-5.41-10.94l71.16-52.9c8.13-6,23.74-10.94,34.86-10.94l406,0c11.12,0,13.54,4.9,5.41,10.94l-71.16,52.9C805.5,651.1,789.89,656,778.77,656Z"
-                        transform="translate(-236.85 -225)"
-                    />
-                    <path
-                        class="cls-2"
-                        d="M248,737"
-                        transform="translate(-236.85 -225)"
-                    />
-                </svg>
-                    <div class="contact"> 
-                        613-314-2234 
-                    </div>
-                    <div class="contact">
-                        andretelfer@gmail.com
-                    </div>
-                </div>
-                <div class="scroll-down-page2"></div>
+    </div>
+    <!-- <div class="page">
+        <div class="square-grid">
+            <div class="center-content">I like to fiddle with code.</div>
+            <div class="square-grid">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
+            <div class="square-grid">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div></div>
         </div>
-    </body>
+    </div> -->
+</body>
 </html>
