--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js"> </script>
     <link href="https://fonts.googleapis.com/css?family=Oxanium&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="page center-content">
         <div class="intro">
             <h1 class="whoami glitch" data-text="Andre Telfer">Andre Telfer</h1>
-            <div><p class="typing caret"></p></div>
-            <div><p class="typing"></p></div>
-            <div><p class="typing"></p></div>
+            <div class="typing-wrapper">
+                <div><p class="typing caret"></p></div>
+                <div><p class="typing"></p></div>
+                <div><p class="typing"></p></div>
+            </div>
+        </div>
+        <div class="header">
+            <a href="mailto: andretelfer@cmail.carleton.ca"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/andretelfer/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+            <a href="https://stackoverflow.com/users/2507197/alter"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
         </div>
     </div>
     <!-- <div class="page">
