added page title and mediaquery for smaller screens

--- a/index.html
+++ b/index.html
@@ -1,49 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <script data-ad-client="ca-pub-9061943454026531" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js"> </script>
-    <link href="https://fonts.googleapis.com/css?family=Oxanium&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <title>Document</title>
-</head>
 
-<body>
-    <div class="page center-content">
-        <div class="intro">
-            <h1 class="whoami glitch" data-text="Andre Telfer">Andre Telfer</h1>
-            <div class="typing-wrapper">
-                <div><p class="typing caret"></p></div>
-                <div><p class="typing"></p></div>
-                <div><p class="typing"></p></div>
+    <head>
+        <script data-ad-client="ca-pub-9061943454026531" async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <script src="main.js"> </script>
+        <link href="https://fonts.googleapis.com/css?family=Oxanium&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <title>atelfer</title>
+    </head>
+
+    <body>
+        <div class="page center-content">
+            <div class="intro">
+                <h1 class="whoami glitch" data-text="Andre Telfer">Andre Telfer</h1>
+                <div class="typing-wrapper">
+                    <div>
+                        <p class="typing caret"></p>
+                    </div>
+                    <div>
+                        <p class="typing"></p>
+                    </div>
+                    <div>
+                        <p class="typing"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="header">
+                <a href="mailto: andretelfer@cmail.carleton.ca"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/andretelfer/"><i class="fa fa-linkedin-square"
+                        aria-hidden="true"></i></a>
+                <a href="https://stackoverflow.com/users/2507197/alter"><i class="fa fa-stack-overflow"
+                        aria-hidden="true"></i></a>
             </div>
         </div>
-        <div class="header">
-            <a href="mailto: andretelfer@cmail.carleton.ca"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-            <a href="https://www.linkedin.com/in/andretelfer/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-            <a href="https://stackoverflow.com/users/2507197/alter"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-        </div>
-    </div>
-    <!-- <div class="page">
-        <div class="square-grid">
-            <div class="center-content">I like to fiddle with code.</div>
-            <div class="square-grid">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div class="square-grid">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div></div>
-        </div>
-    </div> -->
-</body>
+    </body>
+
 </html>
